# agent-sphere

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md
.github/workflows/: build-base.yml  build-initramfs.yml  build-kernel.yml  build-rootfs.yml  pr-check.yml  release.yml
docs/: agentsphered.md  build.md  cli.md  linux-update.md  radxa-a733-kvm-vgic.md  tenboxd.md
installer/: TenBox.wxs  license.rtf
packaging/build-base/: Dockerfile.jammy  README.md
packaging/debian/: build-deb.sh  control.in  prerm
packaging/systemd/: agentsphered.service
scripts/: build-macos.sh  build-msi-nosign.bat  build-msi.bat  image_manager.py  install-linux.sh  make-dmg-styled.py  make-dmg.sh  publish.py
scripts/arm64/: get-kernel.sh  make-initramfs.sh  make-rootfs-chromium.sh  make-rootfs-hermes.sh  make-rootfs-openclaw.sh  make-rootfs-qwenpaw.sh
scripts/ci/: update_images_json.py  upload_to_oss.py
scripts/docker/: Dockerfile  build.sh
scripts/keys/: README.md
scripts/rootfs-configs/: qwenpaw-provider-tenbox.json
scripts/rootfs-scripts/: virtio-gpu-resize.sh
scripts/rootfs-services/: qwenpaw.service  serial-getty-autologin.conf
scripts/x86_64/: get-kernel.sh  make-initramfs.sh  make-rootfs-chromium.sh  make-rootfs-hermes.sh  make-rootfs-openclaw.sh  make-rootfs-qwenpaw.sh
src/: version.h.in
src/cli/: CMakeLists.txt  main.cpp
src/client/: client.cpp
src/common/: image_source.h
src/core/: CMakeLists.txt  README.md
src/core/arch/aarch64/: fdt_builder.h
src/core/net/: net_backend.cpp  net_backend.h  net_nat.cpp  net_port_forward.cpp
src/daemon/: CMakeLists.txt  cloud_tunnel.cpp  cloud_tunnel.h  daemon_types.cpp  daemon_types.h  ffmpeg_video_encoder.cpp  host_updater.cpp  host_updater.h  llm_proxy.cpp  llm_proxy.h  main.cpp  remote_webrtc.cpp  remote_webrtc.h  rpc_server.cpp  runtime_manager.cpp  vm_store.cpp  vm_store.h
src/ipc/: CMakeLists.txt  unix_socket.h
src/manager/: CMakeLists.txt  app_settings.cpp  app_settings.h  http_download.cpp  i18n.cpp  i18n.h  llm_proxy.cpp  main.cpp  oidc_client.cpp  oidc_client.h  oidc_http_mac.mm  oidc_token_store.h  oidc_token_store_mac.mm  oidc_token_store_win.cpp  toolbar.rc
src/manager-macos/: AgentSphereApp.swift  Package.swift  TenBoxApp.swift
src/manager-macos/Bridge/: AgentSphere-Bridging-Header.h  AgentSphereBridgeWrapper.swift  IpcClientWrapper.swift  SettingsStore.swift  TenBoxBridgeWrapper.swift  VmConfigStore.swift  VmProcessManager.swift
src/manager-macos/Bridge/Sources/: AgentSphereBridge.mm  AgentSphereIPC.mm
src/manager-macos/Bridge/Sources/ipc/: unix_socket.h
src/manager-macos/Bridge/include/: AgentSphereBridge.h  AgentSphereIPC.h
src/manager-macos/Input/: InputHandler.swift
src/manager-macos/Resources/: AgentSphere.entitlements  Info.plist
src/manager-macos/Services/: ImageSourceService.swift  LlmProxyService.swift  OidcService.swift
src/manager-macos/Views/: ContentView.swift  CreateVmDialog.swift  DisplayView.swift  InfoView.swift  LlmProxyView.swift  LoginView.swift  SettingsView.swift  VmDetailView.swift  VmListView.swift
src/manager/ui/: create_vm_dialog.cpp  edit_vm_dialog.cpp  llm_proxy_dialog.cpp  login_dialog.cpp  login_dialog.h  win32_display_panel.cpp  win32_ui_shell.cpp
src/platform/macos/hypervisor/aarch64/: hvf_vm.cpp
src/platform/macos/hypervisor/x86_64/: hvf_vcpu.cpp
src/platform/windows/hypervisor/: whvp_vcpu.cpp  whvp_vcpu.h  whvp_vm.cpp
src/runtime/: CMakeLists.txt  crash_handler.cpp  main.cpp  runtime.rc
website/: CLAUDE.md  next.config.ts  package-lock.json  package.json
website/public/: fix-radxa-a733-vgic.sh  install.sh
website/public/api/: appcast.xml  images.json  version.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: InstallSection.vue
website/src/components/sections/: FeaturesSection.tsx  FooterSection.tsx  HeroSection.tsx  HowItWorks.tsx  InstallSection.tsx  NavBar.tsx
website/src/hooks/: useTypewriter.ts
website/src/i18n/: en-US.json  index.tsx  zh-CN.json
website/src/lib/: version.ts
